docs: introduce chapter 'integration'

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -12,4 +12,5 @@ include::_introduction.adoc[leveloffset=+1]
 include::_requirements.adoc[leveloffset=+1]
 include::_usage.adoc[leveloffset=+1]
 include::_goals.adoc[leveloffset=+1]
+include::_integration.adoc[leveloffset=+1]
 include::_license.adoc[leveloffset=+1]
