docs: beautify plugin documentation

--- a/src/main/asciidoc/_goals.adoc
+++ b/src/main/asciidoc/_goals.adoc
@@ -8,7 +8,7 @@ This plugin has the following goals:
 |Goal |Description
 
 |<<goals:check,sync-packagejson-version:check>>
-|Checks if the package.json files located in the project have the same version as the version defined in the pom.xml of the project.
+|Checks if the package.json files located in the project have the same version as the version defined in the pom.xml.
 
 |<<goals:help,sync-packagejson-version:help>>
 |Display help information on the plugin. Call `mvn sync-packagejson-version:help -Ddetail=true -Dgoal=<goal>` to display parameter details.
