--- a/src/main/asciidoc/_integration.adoc
+++ b/src/main/asciidoc/_integration.adoc
@@ -1,6 +1,7 @@
 [[integration]]
 = Integration
 
+[[integration:eclipse]]
 == Eclipse
 
 This plugin contains support for M2E, including lifecycle mappings and support for incremental builds in Eclipse. The <<goals:check,check>> goal support incremental builds to avoid doing unnecessary work.
