--- a/src/main/asciidoc/_goals.adoc
+++ b/src/main/asciidoc/_goals.adoc
@@ -8,10 +8,10 @@ This plugin has the following goals:
 |Goal |Description
 
 |<<goals:sync,sync-packagejson-version:sync>>
-|Synchronizes the versions of the package.json like files in the project with the version of the pom.xml.
+|Synchronizes the versions of a package.json in the project with the version of the pom.xml.
 
 |<<goals:check,sync-packagejson-version:check>>
-|Checks if the package.json files located in the project have the same version as the version defined in the pom.xml.
+|Checks if a package.json located in the project has the same version as the version defined in the pom.xml.
 
 |<<goals:help,sync-packagejson-version:help>>
 |Display help information on the plugin. Call `mvn sync-packagejson-version:help -Ddetail=true -Dgoal=<goal>` to display parameter details.
@@ -20,7 +20,7 @@ This plugin has the following goals:
 [[goals:sync]]
 == sync
 
-Synchronizes the versions of the package.json like files in the project with the version of the pom.xml.
+Synchronizes the version of a package.json in the project with the version of the pom.xml.
 
 [[goals:sync:attributes]]
 === Attributes
@@ -39,7 +39,7 @@ Parameter prefix is `sync-packagejson-version.sync.`
 
 |encoding
 |String
-|The encoding in which the files are interpreted while executing this mojo.
+|The encoding in which the file is interpreted while executing this mojo.
 |false
 |${project.build.sourceEncoding}
 |encoding
@@ -62,7 +62,7 @@ Parameter prefix is `sync-packagejson-version.sync.`
 [[goals:check]]
 == check
 
-Checks if the package.json files located in the project have the same version as the version defined in the pom.xml of the project.
+Checks if a package.json located in the project has the same version as the version defined in the pom.xml.
 
 [[goals:check:attributes]]
 === Attributes
@@ -96,7 +96,7 @@ Parameter prefix is `sync-packagejson-version.check.`
 
 |encoding
 |String
-|The encoding in which the files are interpreted while executing this mojo.
+|The encoding in which the file is interpreted while executing this mojo.
 |false
 |${project.build.sourceEncoding}
 |encoding
