--- a/src/main/asciidoc/_usage.adoc
+++ b/src/main/asciidoc/_usage.adoc
@@ -1,13 +1,13 @@
 [[usage]]
 = Usage
 
-To synchronize the version of the package.json with the version of the pom.xml you need to execute the <<goals:sync,sync>> goal manually.
+To synchronize the version of a package.json with the version of the pom.xml you need to execute the <<goals:sync,sync>> goal manually.
 [source,bash,indent=0,subs="verbatim,quotes,attributes"]
 ----
 $ mvn sync-packagejson-version:sync
 ----
 
-To check that the version of the package.json is in sync with the version of the pom.xml on a regular base, include the appropriate XML in the plugins section of your pom.xml, as shown in the following example:
+To check that the version of a package.json is in sync with the version of the pom.xml on a regular base, include the appropriate XML in the plugins section of your pom.xml, as shown in the following example:
 [source,xml,indent=0,subs="verbatim,quotes,attributes"]
 ----
 <project>
@@ -56,7 +56,7 @@ If you use a snapshot release, you also need to add the appropriate pluginReposi
 </project>
 ----
 
-The plugin offers a number of user properties, starting with `sync-packagejson-version.<goal>.-`, to let you customize the configuration from the command-line. For instance, you could disable the build from failing even though no package.json file is found as follows:
+The plugin offers a number of user properties, starting with `sync-packagejson-version.<goal>.-`, to let you customize the configuration from the command-line. For instance, you could disable the build from failing even though no package.json is found as follows:
 [source,bash,indent=0,subs="verbatim,quotes,attributes"]
 ----
 $ mvn verify -Dsync-packagejson-version.check.failIfNoneFound=false
