--- a/src/main/asciidoc/_introduction.adoc
+++ b/src/main/asciidoc/_introduction.adoc
@@ -1,4 +1,4 @@
 [[introduction]]
 = Introduction
 
-This {apache-maven-url}[Maven] plugin allows you to synchronize the version of a package.json with the version declared in the pom.xml, both files need to be located in the same Maven based project.
+This {apache-maven-url}[Maven] plugin allows you to synchronize the version declared in a pom.xml file with versions declared in one or more package.json files within the scope of a Maven project.
