feat(#38): let check mojo evaluate pom version based on configuration

--- a/src/main/asciidoc/_goals.adoc
+++ b/src/main/asciidoc/_goals.adoc
@@ -121,6 +121,13 @@ Parameter prefix is `sync-packagejson-version.check.`
 |false
 |true
 |failIfNoneFound
+
+|pomVersionEvaluation
+|String
+|The rule how the version of the pom.xml is evaluated. Permissible values are 'runtime' and 'static'.
+|false
+|runtime
+|pomVersionEvaluation
 |===
 
 [[goals:help]]
